37-OPA-Gatekeeper/02-Constraints-K8sRequiredLabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
    - kube-system
    - kube-public
    - kube-node-lease
    - default
    - gatekeeper-system
  parameters:
    labels: ["gatekeeper"]
